# digit_recog

./: .gitignore  LICENSE  LeNet_5_train.ipynb  README.md  app.py  build.sh  functions.py  main.py  pyproject.toml  render.yaml  requirements.txt  train.py  train_nn.ipynb
.github/: dependabot.yml
.github/workflows/: ci.yml
digit_recog/: __init__.py  model.py  preprocessing.py  viz.py
flask_app/: app.py  functions.py
flask_app/static/: draw.js  draw_mod.js  small-business.css  style.css
flask_app/templates/: base.html  index.html  models.html
models/: LeNet_5_train.ipynb  le_net5_v2.keras  normalization.json
streamlit_app/: app.py  utils.py
templates/: about.html  base.html  index.html  internals.html  models.html
tests/: test_app.py  test_ui.py
