[project]
name = "digit-recog"
version = "1.0.0"
description = "Web app to recognize hand-drawn digits using a Keras CNN trained on MNIST."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
dependencies = [
    "numpy==1.26.2",
    "pandas",
    "altair",
    "streamlit>=1.49.0",
    "streamlit-drawable-canvas-fix==0.9.8",
    "tensorflow==2.15.0.post1",
    "opencv-python-headless==4.8.1.78",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
pythonpath = ["streamlit_app"]
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["models"]

[tool.uv]
package = false
# tensorflow 2.15 only ships x86_64 Linux wheels matching this pin; this is
# also the Streamlit Community Cloud runtime.
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
